# buffett-screener

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env  AGENTS.md  PROVIDER-ABSTRACTION-VERIFICATION.md  README.md  SUBTASK-5-4-VERIFICATION.md  docker-compose.yml
apps/api/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: health.py
apps/api/app/core/: config.py  db.py
apps/api/app/db/models/: __init__.py
apps/api/app/domain/: provider_contracts.py
apps/api/app/models/: __init__.py  alert.py  company.py  derived_metric.py  financial.py  financial_statement.py  listing.py  price.py  provider.py  provider_snapshot.py  screen.py
apps/api/app/providers/: __init__.py  base.py  registry.py  yahoo_yfinance.py
apps/api/app/schemas/: __init__.py  company.py  financial.py  price.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema_with_all_core_entities.py
apps/api/scripts/: verify_schema.py
apps/api/tests/: __init__.py
apps/api/tests/models/: test_company.py  test_financial.py  test_price.py
apps/api/tests/providers/: __init__.py  conftest.py  test_base.py  test_registry.py  test_yahoo_yfinance.py
docs/: 01_PROJECT_CHARTER.md  02_RESEARCH_AND_DECISIONS.md  03_PRODUCT_REQUIREMENTS.md  04_ARCHITECTURE.md  05_DATA_AND_METRICS.md  06_ROADMAP.md  07_REPOSITORY_STRUCTURE.md  08_OPEN_QUESTIONS.md  09_SOURCES.md
scripts/: README.md  test-api-health.sh  test-frontend.sh  test-mailhog.sh  verify-docker-setup.sh
(+8 files in other folders)
